Contrast fixes

--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,11 @@ body {
 
 header{grid-area: heady; max-height: 100%}
 nav{grid-area: navvy; background: #13678A;}
-#subhead{grid-area: suby; background: #45C4B0;}
+#subhead{grid-area: suby; background: #9AEBA3; color: #012030;}
 #else{grid-area: mainy; max-height: 100%}
 #aside1{grid-area: aside1; background: #13678A;}
 #aside2{grid-area: aside2; background: #13678A;}
-footer{grid-area: footy; background: #45C4B0;}
+footer{grid-area: footy; background: #9AEBA3; color: #012030;}
 
 header, nav, section,
 aside, footer {
